--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
-  "title": "Geolonia PWAマップ",
-  "description": "Google スプレッドシートを更新するだけでオリジナルの地図アプリを作成できる\n「Geolonia PWAマップ」",
+  "title": "守成クラブぎふ柳ヶ瀬会場",
+  "description": "守成クラブぎふ柳ヶ瀬会場夜のおもてなしマップ",
   "form_url": "",
-  "logo_image_url": "public/logosyusei.png",
+  "logo_image_url": "https://github.com/jyan10/MAP3/blob/master/public/manifest.json",
   "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
   "primary_color": "#d2691e"
 }
