スプレッドシートのデータを更新

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "title": "守成クラブぎふ柳ヶ瀬会場",
   "description": "守成クラブぎふ柳ヶ瀬会場夜のおもてなしマップ",
   "form_url": "",
-  "logo_image_url": "https://github.com/jyan10/MAP3/shusei.svg",
+  "logo_image_url": "https://github.com/jyan10/MAP3/blob/master/public/shusei1-01.svg",
   "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
   "primary_color": "#d2691e"
 }
