--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://jyan10.github.io/-/",
+  "homepage": "https://jyan10.github.io/gifugifuomotenasi/",
   "eslintConfig": {
     "extends": "react-app"
   },
