スプレッドシートのデータを更新

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "title": "守成クラブぎふ柳ヶ瀬会場",
   "description": "守成クラブぎふ柳ヶ瀬会場夜のおもてなしマップ",
-  "form_url": "",
+  "form_url": "https://docs.google.com/spreadsheets/d/1Zx-dUzqVG4WQ4k94ouBMuu0gexI9Q0nNF0OoZue6C40/edit?usp=sharing",
   "logo_image_url": "https://github.com/jyan10/gifuomotenasi/blob/master/public/shusei.svg",
   "background_image_url": "https://github.com/jyan10/gifuomotenasi/blob/master/public/map.jpg",
   "primary_color": "#d2691e"
